--- a/roles/discourse/tasks/main.yml
+++ b/roles/discourse/tasks/main.yml
@@ -41,8 +41,9 @@
   - log
 
 - name: discourse | loading seed data
-  command: /bin/su - discourse -c "cd /home/discourse/discourse && psql discourse_production < pg_dumps/production-image.sql"
-  only_if: ${load_seed_data}
+#  command: /bin/su - discourse -c "cd /home/discourse/discourse && psql discourse_production < pg_dumps/production-image.sql"
+  command: echo "test"
+  when: load_seed_data
 
 - name: discourse | copy plugins
   sudo: no
@@ -56,14 +57,14 @@
         group=discourse
 
 - name: discourse | bundle install
-  command: /bin/bash --login -c "cd /home/discourse/discourse && bundle install --deployment --without test"
-  only_if: ${git_repo.changed}
+  command: /bin/bash --login -c "cd /home/discourse/discourse && RAILS_ENV=production RAILS4=1 bundle install --deployment --without test"
+#  when: git_repo.changed
 
 - name: discourse | precompile assets
-  command: /bin/bash --login -c "cd /home/discourse/discourse && RUBY_GC_MALLOC_LIMIT={{ruby_gc_malloc_limit}} RAILS_ENV=production bundle exec rake assets:precompile"
+  command: /bin/bash --login -c "cd /home/discourse/discourse && RUBY_GC_MALLOC_LIMIT={{ruby_gc_malloc_limit}} RAILS_ENV=production RAILS4=1 bundle exec rake assets:precompile"
 
 - name: discourse | migrate database
-  command: /bin/bash --login -c "cd /home/discourse/discourse && RUBY_GC_MALLOC_LIMIT={{ruby_gc_malloc_limit}} RAILS_ENV=production bundle exec rake db:migrate"
+  command: /bin/bash --login -c "cd /home/discourse/discourse && RUBY_GC_MALLOC_LIMIT={{ruby_gc_malloc_limit}} RAILS_ENV=production RAILS4=1 bundle exec rake db:migrate"
 
 - name: discourse | copy monit config
   template: src=monit
@@ -72,7 +73,7 @@
 
 - name: discourse | restart monit
   service: name=monit state=restarted
-  only_if: ${discourse_monit_config.changed}
+  when: discourse_monit_config.changed
 
 - name: discourse | restart application
   shell: monit -g discourse restart
