Run on latest Ansible. Fix issues related to Rails 4 + Unicorn switch.

--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: redis | update apt cache
   apt: update_cache=yes
-  only_if: ${add_redis_ppa.changed}
+  when: add_redis_ppa.changed
 
 - name: redis | install redis-server
   apt: pkg=redis-server state=present
