--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -42,7 +42,7 @@
 
 - name: restart monit
   service: name=monit state=restarted
-  only_if: ${monitrc.changed}
+  when: monitrc.changed
 
 # Install Ruby.
 - include: rbenv.yml
@@ -57,4 +57,4 @@
 
 - name: reconfigure tzdata
   shell: dpkg-reconfigure -f noninteractive tzdata
-  only_if: ${timezone.changed}
+  when: timezone.changed
