--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -11,12 +11,20 @@
   user: name=postgres password={{postgres_user_password}}
 
 - name: postgres | copy pg_hba.conf
+  copy: src=postgresql.conf dest=/etc/postgresql/9.2/main/postgresql.conf
+  register: pg_conf
+
+- name: postgres | restarting
+  service: name=postgresql state=restarted
+  when: pg_conf.changed
+
+- name: postgres | copy pg_hba.conf
   copy: src=pg_hba.conf dest=/etc/postgresql/9.2/main/pg_hba.conf
   register: pg_hba
 
 - name: postgres | restarting
   service: name=postgresql state=restarted
-  only_if: ${pg_hba.changed}
+  when: pg_hba.changed
 
 - name: Create backups directory structure
   file: path=$item state=directory owner=postgres
